[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Entities/Entity.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "die"

[node name="Entity" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Health" type="Node2D" parent="."]

[node name="DeathTimer" type="Timer" parent="Health"]

[node name="DecayTimer" type="Timer" parent="Health"]

[node name="CorpseSprite" type="Sprite" parent="Health"]

[node name="Appearance" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Appearance"]

[node name="Engine" type="Node2D" parent="."]

[node name="Locomotion" type="Node2D" parent="."]

[node name="HeatSink" type="Node2D" parent="."]

[node name="Weapons" type="Node2D" parent="."]

[node name="Defences" type="Node2D" parent="."]

[node name="Summons" type="Node2D" parent="."]

[node name="Input" type="Node2D" parent="."]

[node name="TargetAcquisitionSensors" type="Node2D" parent="."]

[connection signal="timeout" from="Health/DecayTimer" to="." method="_on_DecayTimer_timeout"]
